# napari-pystackreg

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/: _util.py
src/napari_pystackreg/: _sample_data.py  _util.py  _widget.py  napari.yaml
src/napari_pystackreg/_tests/: test_reader.py  test_sample_data.py  test_widget.py
