[metadata]
name = napari_pystackreg
version = 0.1.1
description = Robust image registration for napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glichtner/napari-pystackreg
author = Gregor Lichtner
author_email = gregor.lichtner@med.uni-greifswald.de
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/glichtner/napari-pystackreg/issues
    Documentation = https://github.com/glichtner/napari-pystackreg#README.md
    Source Code = https://github.com/glichtner/napari-pystackreg
    User Support = https://github.com/glichtner/napari-pystackreg/issues

[options]
packages = find:
install_requires =
    magicgui
    numpy
    pystackreg>=0.2.6
    qtpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-pystackreg = napari_pystackreg:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
